added at @media query 640px

--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
                     </p>
                 </div>
                 <div class="works-img blue">
-                    <img src="./media/Macbook Pro.png" alt="laptop" class="laptop">
-                    <img src="./media/iPhone SE 2022.png" alt="" class="phone">
+                    <div class="images">
+                        <img src="./media/Macbook Pro.png" alt="laptop" class="laptop">
+                       <img src="./media/iPhone SE 2022.png" alt="" class="phone">
+                    </div>
+
                     <div class="visit">
                         <a href="#">Visit live app</a>
                         <img src="./media/white-arrow.png" alt="">
@@ -78,8 +81,11 @@
                     </p>
                 </div>
                 <div class="works-img yellow">
-                    <img src="./media/Macbook Pro.png" alt="laptop" class="laptop">
-                    <img src="./media/iPhone SE 2022.png" alt="" class="phone">
+                    <div class="images">
+                        <img src="./media/Macbook Pro.png" alt="laptop" class="laptop">
+                       <img src="./media/iPhone SE 2022.png" alt="" class="phone">
+                    </div>
+
                     <div class="visit">
                         <a href="#">Visit live app</a>
                         <img src="./media/white-arrow.png" alt="">
@@ -97,8 +103,11 @@
                     </p>
                 </div>
                 <div class="works-img green">
-                    <img src="./media/Macbook Pro.png" alt="laptop" class="laptop">
-                    <img src="./media/iPhone SE 2022.png" alt="" class="phone">
+                    <div class="images">
+                        <img src="./media/Macbook Pro.png" alt="laptop" class="laptop">
+                       <img src="./media/iPhone SE 2022.png" alt="" class="phone">
+                    </div>
+
                     <div class="visit">
                         <a href="#">Visit live app</a>
                         <img src="./media/white-arrow.png" alt="">
@@ -109,6 +118,7 @@
 
         <section class="contacts-section" id="contact">
             <p>Get in touch, <a href="#" class="say-hello">saying hello is just fine.</a></p>
+            
             <div class="contact-links">
                 <div class="contact">
                     <a href="#">LINKEDIN</a>
