modified the original design

--- a/index.html
+++ b/index.html
@@ -4,140 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>myPortfolio</title>
+    <title>Muhammed_Balogun</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <h2>MB</h2>
+        </div>
+        <nav>
+            <li><a href="#about">About</a></li>
+            <li><a href="#work">work</a></li>
+        </nav>
+    </header>
+
     <main>
-        <header>
-            <h3 class="logo">DON PABLO</h3>
-            <nav>
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#work" class="nav-link">Work</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
-                <div class="vector">
-                    <img src="./media/Vector.png" alt="Vector">
-                </div>
-            </nav>
-        </header>
-
         <section class="hero-section">
-            <p class="greeting">Hi, it's nice to meet you</p>
-            <p class="pablo">I'm Pablo! I'm a web developer that loves to bridge the gap between design and technology.</p>
+            <p class="hero-1">Hi, it's nice to meet you!</p>
+            <p class="hero-2">I am a creative Frontend developer that loves to bridge the gap between design and technology.</p>
+            <button>Contact me</button>
         </section>
 
-        <section class="about-section" id="about">
-            <div class="bio">
-                <img src="./media/frame.png" alt="">
-                <div>
-                    <p class="abt">About</p>
-                    <p class="info">I am a developer based in Lagos, Nigeria focused on creating interactive digital experiences on the web, working with brands and industry leaders such as DISNEY, PAYSTACK, PRINTIVO, and WILD amongst others to achieve this.
-                    </p>
-                </div>
+       <section id="about" class="about-section">
+        <img src="/media/workspace-unsplash.jpg" alt="">
+        <div class="bio">
+            <h2>Bio</h2>
+            <p class="bio-text1">I am Balogun Muhammed, a Software Engineer from Lagos, Nigeria. For the past 6months, I have been actively engaged in learning industry standard skills and cutting edge technologies employed in building elegant and scalable websites.</p>
+            <p class="bio-text2">Coupled with the above, I am also a passionate Technical Writer. I often write to break down complex programming topics into simple and easy to understand modules.</p>
+            <p class="bio-text3">When not coding or writing, I love visting and spending quality time with my friends and family.</p>
+            <article class="tools">
+                <h3>Tools And Technology</h3>
+                <p>Html <span>|</span> Css <span>|</span> Javascript <span>|</span> Tailwind css <span>|</span> React.js</p>
             </div>
+        </div>
+       </section>
 
-            <div class="technology">
-                <p>Technologies</p>
-                <p class="stack">JavaScript, Typescript, React, Nextjs, Gatsbyjs, Vue.js, Nuxtjs, CSS, SCSS, Greensock, Framer Motion, CSS-in-JS, Firebase, CraftCMS,</p>
-            </div>
-
-            <div class="tool">
-                <p>Tools</p>
-                <p class="stack">JavaScript, Typescript, React, Nextjs, Gatsbyjs, Vue.js, Nuxtjs, CSS, SCSS, Greensock, Framer Motion, CSS-in-JS, Firebase, CraftCMS,</p>
-            </div>
-        </section>
-
-        <section class="projects-section" id="work">
-            <h5>Selected projects</h5>
-            <div class="works first-work">
-                <div class="works-details">
-                    <div>
-                        <p class="gypsy">Gypsy Capital</p>
-                        <p class="mongo">Mongo DB, React JS, Express Js, Node JS</p>
-                    </div>
-                    <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pulvinar ultrices id ut nunc arcu blandit blandit congue. Facilisi maecenas morbi adipiscing risus in dictum.
-                    </p>
-                </div>
-                <div class="works-img blue">
-                    <div class="images">
-                        <img src="./media/Macbook Pro.png" alt="laptop" class="laptop">
-                       <img src="./media/iPhone SE 2022.png" alt="" class="phone">
-                    </div>
-
-                    <div class="visit">
-                        <a href="#">Visit live app</a>
-                        <img src="./media/white-arrow.png" alt="">
-                    </div>
-                </div>
-            </div>
-
-            <div class="works second-work">
-                <div class="works-details">
-                    <div>
-                        <p class="gypsy">Gypsy Capital</p>
-                        <p class="mongo">Mongo DB, React JS, Express Js, Node JS</p>
-                    </div>
-                    <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pulvinar ultrices id ut nunc arcu blandit blandit congue. Facilisi maecenas morbi adipiscing risus in dictum.
-                    </p>
-                </div>
-                <div class="works-img yellow">
-                    <div class="images">
-                        <img src="./media/Macbook Pro.png" alt="laptop" class="laptop">
-                       <img src="./media/iPhone SE 2022.png" alt="" class="phone">
-                    </div>
-
-                    <div class="visit">
-                        <a href="#">Visit live app</a>
-                        <img src="./media/white-arrow.png" alt="">
-                    </div>
-                </div>
-            </div>
-
-            <div class="works third-work">
-                <div class="works-details">
-                    <div>
-                        <p class="gypsy">Gypsy Capital</p>
-                        <p class="mongo">Mongo DB, React JS, Express Js, Node JS</p>
-                    </div>
-                    <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pulvinar ultrices id ut nunc arcu blandit blandit congue. Facilisi maecenas morbi adipiscing risus in dictum.
-                    </p>
-                </div>
-                <div class="works-img green">
-                    <div class="images">
-                        <img src="./media/Macbook Pro.png" alt="laptop" class="laptop">
-                       <img src="./media/iPhone SE 2022.png" alt="" class="phone">
-                    </div>
-
-                    <div class="visit">
-                        <a href="#">Visit live app</a>
-                        <img src="./media/white-arrow.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="contacts-section" id="contact">
-            <p>Get in touch, <a href="#" class="say-hello">saying hello is just fine.</a></p>
-            
-            <div class="contact-links">
-                <div class="contact">
-                    <a href="#">LINKEDIN</a>
-                    <img src="./media/black-arrow.png" alt="">
-                </div>
-                <div class="contact">
-                    <a href="#">EMAIL</a>
-                    <img src="./media/black-arrow.png" alt="">
-                </div>
-                <div class="contact">
-                    <a href="#">GITHUB</a>
-                    <img src="./media/black-arrow.png" alt="">
-                </div>
-                <div class="contact">
-                    <a href="#">CV</a>
-                    <img src="./media/black-arrow.png" alt="">
-                </div>
-            </div>
-        </section>
+       <section id="work" class="work-section">
+        <h2>Here are some of my projects</h2>
+       </section>
     </main>
+
+    <footer>
+        <p>Get in touch, just saying hello is fine!</p>
+        <div>
+            <a href="http://balogunmba22@gmail.com" target="_blank">Email</a>
+            <a href="http://">Github</a>
+            <a href="http://">Twitter</a>
+        </div>
+    </footer>
 </body>
 </html>
