updated some features

--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
             <h2>MB</h2>
         </div>
         <nav>
+            <div class="phone">
+                <img src="/media/phone.svg" alt="phone">
+                <p>+234 807 0543678</p>
+            </div>
             <li><a href="#about">About</a></li>
-            <li><a href="#work">work</a></li>
+            <li><a href="#work">Work</a></li>
         </nav>
     </header>
 
     <main>
         <section class="hero-section">
-            <p class="hero-1">Hi, it's nice to meet you!</p>
-            <p class="hero-2">I am a creative Frontend developer that loves to bridge the gap between design and technology.</p>
-            <button>Contact me</button>
+            <p class="hero-1">Hello!</p>
+            <p class="hero-2">I am a Creative Frontend Developer that loves to<br>bridge the gap between design and technology.</p>
         </section>
 
        <section id="about" class="about-section">
-        <img src="/media/workspace-unsplash.jpg" alt="">
         <div class="bio">
-            <h2>Bio</h2>
+            <h2>About me</h2>
             <p class="bio-text1">I am Balogun Muhammed, a Software Engineer from Lagos, Nigeria. For the past 6months, I have been actively engaged in learning industry standard skills and cutting edge technologies employed in building elegant and scalable websites.</p>
             <p class="bio-text2">Coupled with the above, I am also a passionate Technical Writer. I often write to break down complex programming topics into simple and easy to understand modules.</p>
             <p class="bio-text3">When not coding or writing, I love visting and spending quality time with my friends and family.</p>
@@ -36,6 +38,9 @@
                 <h3>Tools And Technology</h3>
                 <p>Html <span>|</span> Css <span>|</span> Javascript <span>|</span> Tailwind css <span>|</span> React.js</p>
             </div>
+        </div>
+        <div class="bio-photo">
+            <img src="/media/christopher-gower-m_HRfLhgABo-unsplash.jpg" alt="">
         </div>
        </section>
 
@@ -47,7 +52,6 @@
     <footer>
         <p>Get in touch, just saying hello is fine!</p>
         <div>
-            <a href="http://balogunmba22@gmail.com" target="_blank">Email</a>
             <a href="http://">Github</a>
             <a href="http://">Twitter</a>
         </div>
