--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
     </main>
 
     <footer>
-        <p>Get in touch, just saying hello is fine!</p>
+        <p><span>Get in touch,</span> just saying hello is fine!</p>
         <div>
+            <a href="http://">LinkedIn</a>
             <a href="http://">Github</a>
             <a href="http://">Twitter</a>
         </div>
