added some media queries

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
        <section id="about" class="about-section">
         <div class="bio">
-            <h2>About me</h2>
+            <h2>Bio</h2>
             <p class="bio-text1">I am Balogun Muhammed, a Software Engineer from Lagos, Nigeria. For the past 6months, I have been actively engaged in learning industry standard skills and cutting edge technologies employed in building elegant and scalable websites.</p>
             <p class="bio-text2">Coupled with the above, I am also a passionate Technical Writer. I often write to break down complex programming topics into simple and easy to understand modules.</p>
             <p class="bio-text3">When not coding or writing, I love visting and spending quality time with my friends and family.</p>
