--- a/index.html
+++ b/index.html
@@ -9,53 +9,43 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h2>MB</h2>
+        <div class="logo-wrapper">
+            <h1 class="logo">MB</h1>
         </div>
         <nav>
-            <div class="phone">
-                <img src="/media/phone.svg" alt="phone">
-                <p>+234 807 0543678</p>
-            </div>
-            <li><a href="#about">About</a></li>
-            <li><a href="#work">Work</a></li>
+            <a href="#about">About</a>
+            <a href="#work">Work</a>
         </nav>
     </header>
 
-    <main>
-        <section class="hero-section">
-            <p class="hero-1">Hello!</p>
-            <p class="hero-2">I am a Creative Frontend Developer that loves to<br>bridge the gap between design and technology.</p>
-        </section>
+    <section class="hero">
+        <div class="hero-circle">
+            <h2>Hello, it's nice to meet you!</h2>
+        </div>
+    </section>
 
-       <section id="about" class="about-section">
-        <div class="bio">
-            <h2>Bio</h2>
-            <p class="bio-text1">I am Balogun Muhammed, a Software Engineer from Lagos, Nigeria. For the past 6months, I have been actively engaged in learning industry standard skills and cutting edge technologies employed in building elegant and scalable websites.</p>
-            <p class="bio-text2">Coupled with the above, I am also a passionate Technical Writer. I often write to break down complex programming topics into simple and easy to understand modules.</p>
-            <p class="bio-text3">When not coding or writing, I love visting and spending quality time with my friends and family.</p>
-            <article class="tools">
+    <section id="about" class="about">
+       <div class="about-text">
+        <h2>About me</h2>
+        <p>I am Muhammed Balogun, a Creative Software Developer that loves to
+            bridge the gap between design and technology. For over a year, I have been actively engaged in learning industry standard skills and cutting edge technologies employed in building elegant and scalable websites.</p>
+            <p>Coupled with the above, I am also a passionate Technical Writer. I often write to break down complex programming topics into simple and easy to understand modules</p>
+            <p>When not coding or writing, I love spending quality time with my family and visiting my friends.</p>
+
+            <div class="tools">
                 <h3>Tools And Technology</h3>
-                <p>Html <span>|</span> Css <span>|</span> Javascript <span>|</span> Tailwind css <span>|</span> React.js</p>
-            </div>
-        </div>
-        <div class="bio-photo">
-            <img src="/media/christopher-gower-m_HRfLhgABo-unsplash.jpg" alt="">
-        </div>
-       </section>
+                <p id="stack">Html | Css | Javascript | React.js<br>Tailwind css | Github | Netifly <br>Typescript | Git | Vscode</p>
+             </div>
+       </div>
+       <div class="about-img">
+        <img src="/media/christopher-gower-m_HRfLhgABo-unsplash.jpg" alt="">
+       </div>
+    </section>
 
-       <section id="work" class="work-section">
-        <h2>Here are some of my projects</h2>
-       </section>
-    </main>
 
-    <footer>
-        <p><span>Get in touch,</span> just saying hello is fine!</p>
-        <div>
-            <a href="http://">LinkedIn</a>
-            <a href="http://">Github</a>
-            <a href="http://">Twitter</a>
-        </div>
-    </footer>
+
+
+    <script src="/script.js"></script>
 </body>
 </html>
+
