--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <div class="logo-wrapper">
-            <h1 class="logo">MB</h1>
-        </div>
+            <h1 class="logo-wrapper">
+                <span class="logo">M</span><span class="logo">B</span>
+            </h1>
         <nav>
             <a href="#about">About</a>
             <a href="#work">Work</a>
@@ -19,7 +19,7 @@
     </header>
 
     <section class="hero">
-        <div class="hero-circle">
+        <div class="hero-text">
             <h2>Hello, it's nice to meet you!</h2>
         </div>
     </section>
