added new styling to the hero section

--- a/index.html
+++ b/index.html
@@ -4,22 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Muhammed</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <!-- Hero -->
     <section class="hero">
-      <img
-        src="https://brandeps.com/icon-download/L/Laptop-code-icon-vector-01.svg"
-        alt="laptop"
-      />
-      <h1>Muhammed Balogun</h1>
-      <article class="titles">
-        <!-- titles goes here -->
-      </article>
-      <p>I design and develop experiences that makes people's lives easy!</p>
+      <header>
+        <nav>
+          <a href="#about">About</a>
+          <a href="#project">Project</a>
+          <a href="#contact">Contact</a>
+        </nav>
+        <img src="/media/menu.svg" alt="menu bar" class="menu_icon" />
+      </header>
+      <p class="hero-text">
+        I design and develop experiences that makes people's lives easy!
+      </p>
     </section>
+
+    <!-- About -->
+    <section class="about" id="about">
+      <h2 class="heading">About Me</h2>
+      <article>
+        <div class="my_pic">
+          <img src="/media/my_pic.jpg" alt="My Photo" />
+          <p class="titles">
+            <!-- titles goes here -->
+          </p>
+        </div>
+
+        <div class="content">
+          <p>
+            Hello, I am Muhammed Balogun. Ex Risk Manager transitioned into a
+            Software Engineer. My area of specialty currently is Frontend
+            Development with React.js.
+          </p>
+          <p>
+            Coupled with the above, I am also a Technical Communicator. I enjoy
+            explaining complex coding concepts into simple understandable pieces
+            either through writing or classes.
+          </p>
+          <p>
+            At my free time, I love exploring and cooking different food
+            varieties, hitting the gym, and visit my friends.
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <!-- Project -->
+    <section class="project" id="project"></section>
+
+    <!-- Contact -->
+    <section class="contact" id="contact"></section>
+
     <!-- Script -->
     <script src="/script.js"></script>
   </body>
