media querie refactored

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
 
         <div class="about-text">
           <p>
-            Hello, I am Muhammed Balogun. Ex Risk Manager transitioned into a
-            Software Engineer. My area of specialty currently is Frontend
+            I am Muhammed Balogun. Ex Risk Manager who transitioned into
+            Software Engineering. My area of specialty currently is Frontend
             Development with React.js.
           </p>
           <p>
             Coupled with the above, I am also a Technical Communicator. I enjoy
-            explaining complex coding concepts into simple understandable pieces
-            either through writing or classes.
+            breaking-down complex coding concepts into simple understandable
+            pieces either through writing or classes.
           </p>
           <p>
             At my free time, I love exploring and cooking different food
-            varieties, hitting the gym, and visiting my friends.
+            varieties, hitting the gym and brainstorming with my friends.
           </p>
         </div>
       </article>
