--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <a href="https://twitter.com/balogunmba" target="_blank">
           <img src="/media/twitter.svg" alt="Twitter" />
         </a>
-        <a href="#">
+        <a href="balogunmba22@gmail.com">
           <img src="/media/email.svg" alt="Email" />
         </a>
       </div>
